--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: "iran-sanse";
+  src: url("./assets/fonts/iransansdn/iransansdnweb.woff");
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  font-family: "iran-sanse";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-main {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form-controll {
+  border: 1px solid #44444442;
+  border-radius: 8px;
+  padding: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-input {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.form-fields {
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  direction: rtl;
+}
+.form-fields input {
+  height: 28px;
+  border-radius: 8px;
+  border: 1px solid #444;
+}
+.form-fields-error {
+  color: red;
+  font-size: 15px;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.form-button {
+  cursor: pointer;
+  background-color: transparent;
+  height: 41px;
+  border: 1px solid #0064b642;
+  border-radius: 8px;
+  background-color: #0064b642;
+  transition: all 0.3s ease;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-button:hover {
+  background-color: #fff;
+  color: #0064b6;
 }
